# tracecp

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  convert_to_streamline_vtk.py  plot.ipynb  run_all.sh
include/: advect.hpp  cp.hpp  interp.h  sz3_utils.hpp  sz_compress_cp_preserve_2d.hpp  sz_compress_cp_preserve_3d.hpp  sz_compression_utils.hpp  sz_cp_preserve_utils.hpp  sz_decompress_cp_preserve_2d.hpp  sz_decompress_cp_preserve_3d.hpp  sz_decompression_utils.hpp  sz_huffman.hpp  utils.hpp  utilsIO.h
python/: convert_2d.ipynb  convert_3d.ipynb
src/: CMakeCache.txt  CMakeLists.txt  Makefile  advect.cpp  cmake_install.cmake  cp.cpp  edr.cpp  interp.cpp  main.cpp  sz_compress_cp_preserve_2d.cpp  sz_compress_cp_preserve_3d.cpp  sz_compress_cp_preserve_sos_2d.cpp  sz_compress_cp_preserve_sos_3d.cpp  sz_compression_utils.cpp  sz_decompress_cp_preserve_2d.cpp  sz_decompress_cp_preserve_3d.cpp  sz_decompression_utils.cpp  sz_huffman.cpp  sz_lossless.cpp  utilsIO.cpp
tests/: 2d_parallel.cpp  3d_parallel.cpp  check_two_trajectory.cpp  lem.cpp  main.bk.cpp  main.cpp  main3d.cpp  naive2d.cpp  naive3d.cpp  preserve_skeleton.cpp  single_traj.cpp  transfer_test.cpp
